force-app/main/default/objects/KimbleOne__InternalRevenueShare__c/KimbleOne__InternalRevenueShare__c.object-meta.xml
<CustomObject>
    <label>Internal Revenue Share</label>
    <nameField>
        <label>Internal Revenue Share Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Revenue Shares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>