force-app/main/default/objects/KimbleOne__InternalRevenueShare__c/fields/KimbleOne__ActualInternalCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActualInternalCost__c</fullName>
    <label>Actual Internal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>