force-app/main/default/objects/KimbleOne__InternalRevenueShare__c/fields/KimbleOne__BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BusinessUnit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>KimbleOne__BusinessUnit__c</referenceTo>
    <relationshipLabel>Internal Revenue Shares</relationshipLabel>
    <relationshipName>InternalRevenueShares</relationshipName>
    <type>Lookup</type>
</CustomField>