force-app/main/default/objects/KimbleOne__InternalRevenueShare__c/fields/KimbleOne__DeliveryElement__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryElement__c</fullName>
    <label>Delivery Element</label>
    <referenceTo>KimbleOne__DeliveryElement__c</referenceTo>
    <relationshipLabel>Internal Revenue Shares</relationshipLabel>
    <relationshipName>InternalRevenueShares</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>