force-app/main/default/objects/KimbleOne__InternalRevenueShare__c/fields/KimbleOne__ForecastingTimePeriod__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastingTimePeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forecasting Time Period</label>
    <referenceTo>KimbleOne__TimePeriod__c</referenceTo>
    <relationshipLabel>Internal Revenue Shares</relationshipLabel>
    <relationshipName>InternalRevenueShares</relationshipName>
    <type>Lookup</type>
</CustomField>