force-app/main/default/objects/KimbleOne__InternalRevenueShare__c/fields/KimbleOne__IntInvCcyActualInternalRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntInvCcyActualInternalRevenue__c</fullName>
    <label>Int Inv Ccy Actual Internal Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>