force-app/main/default/objects/KimbleOne__InternalRevenueShare__c/fields/KimbleOne__IntInvCcyP1ForecastInternalRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntInvCcyP1ForecastInternalRevenue__c</fullName>
    <label>Int Inv Ccy P1 Forecast Internal Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>