force-app/main/default/objects/KimbleOne__InternalRevenueShare__c/fields/KimbleOne__IntInvCcyP2ForecastInternalRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntInvCcyP2ForecastInternalRevenue__c</fullName>
    <label>Int Inv Ccy P2 Forecast Internal Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>