force-app/main/default/objects/KimbleOne__InternalRevenueShare__c/fields/KimbleOne__P1ForecastRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__P1ForecastRevenue__c</fullName>
    <label>P1 Forecast Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>